@@ -9,6 +9,7 @@ noinst_PROGRAMS = \
 	hello \
 	dialog \
 	input-dialog \
+	mandelbrot \
 	fstring \
 	timer \
 	ui 
@@ -16,6 +17,7 @@ noinst_PROGRAMS = \
 hello_SOURCES = hello.cpp
 dialog_SOURCES = dialog.cpp
 input_dialog_SOURCES = input-dialog.cpp
+mandelbrot_SOURCES = mandelbrot.cpp
 fstring_SOURCES = fstring.cpp
 timer_SOURCES = timer.cpp
 ui_SOURCES = ui.cpp
