@@ -12,13 +12,14 @@ MAKEFILE = -f Makefile.clang
 LDFLAGS = -L../src -lfinal
 INCLUDES = -I../src
 RM = rm -f
-PROGS = hello dialog input-dialog fstring timer ui 
+PROGS = hello dialog input-dialog mandelbrot fstring timer ui 
 OBJS1 = hello.o
 OBJS2 = dialog.o
 OBJS3 = input-dialog.o
-OBJS4 = fstring.o
-OBJS5 = timer.o
-OBJS6 = ui.o
+OBJS4 = mandelbrot.o
+OBJS5 = fstring.o
+OBJS6 = timer.o
+OBJS7 = ui.o
 
 ifdef DEBUG
   OPTIMIZE = -O0
@@ -44,14 +45,17 @@ dialog: $(OBJS2)
 input-dialog: $(OBJS3)
 	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o input-dialog $(OBJS3)
 
-fstring: $(OBJS4)
-	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o fstring $(OBJS4)
+mandelbrot: $(OBJS4)
+	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o mandelbrot $(OBJS4)
 
-timer: $(OBJS5)
-	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o timer $(OBJS5)
+fstring: $(OBJS5)
+	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o fstring $(OBJS5)
 
-ui: $(OBJS6)
-	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o ui $(OBJS6)
+timer: $(OBJS6)
+	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o timer $(OBJS6)
+
+ui: $(OBJS7)
+	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -o ui $(OBJS7)
 
 debug:
 	$(MAKE) $(MAKEFILE) DEBUG="-g -D DEBUG -W -Wall  -Weverything -Wpadded -pedantic"
@@ -61,7 +65,7 @@ profile:
 
 .PHONY: clean dep
 clean:
-	$(RM) $(PROGS) $(OBJS1) $(OBJS2) $(OBJS3) $(OBJS4) $(OBJS5) $(OBJS6) .depend  *.gch *.plist *~
+	$(RM) $(PROGS) $(OBJS1) $(OBJS2) $(OBJS3) $(OBJS4) $(OBJS5) $(OBJS6) $(OBJS7) .depend  *.gch *.plist *~
 
 dep:
 	$(CXX) -MM $(INCLUDES) *.cpp >.depend
