@@ -1,5 +1,6 @@
 2015-24-05  Markus Gans  <guru.mail@muenster.de>
 	* Bug fix in FLineEdit (ypos from the label)
+	* Bug fix in FDialog onWindowActive (status bar check)
 
 2015-15-05  Markus Gans  <guru.mail@muenster.de>
         * Remove never read value from code
